fix: flash on dark mode and bad mobile layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -101,12 +101,12 @@
   }
 }
 
-/* Mobile layout */
-@media (max-width: 480px) {
-  .social-buttons {
-    grid-template-columns: 1fr;
-  }
-}
+// /* Mobile layout */
+// @media (max-width: 480px) {
+//   .social-buttons {
+//     grid-template-columns: 1fr;
+//   }
+// }
 
 /* ========================= */
 /* Manual dark mode (HTML class) */
